// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Search Field/Menu (Private) Default 1`] = `
.c7 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border-radius: 4px;
  object-fit: cover;
}

.c3 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c8 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c8:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c8:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c8 > div {
  padding: 14px;
}

.c8 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c8 > div:hover {
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > label {
  padding: 0 8px 0 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: -6px 8px -6px 0;
}

.c6:first-child {
  margin-left: -6px;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
  top: 72px;
  position: absolute;
  width: 100%;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="scroll c2"
      onReachEnd={[Function]}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="itemWrapper c3"
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Apple
          </div>
        </div>
      </li>
      <li
        className="itemWrapper c3"
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Banana
          </div>
        </div>
      </li>
      <li
        className="itemWrapper c3"
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Pear
          </div>
        </div>
      </li>
      <li
        className="itemWrapper footer c8"
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) footer only 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c7 i.margin-left {
  margin-left: 8px;
}

.c7 i.margin-right {
  margin-right: 8px;
}

.c7 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 > a {
  color: inherit;
}

.c7:hover {
  color: #3498db;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c3 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
  top: 72px;
  position: absolute;
  width: 100%;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c0 {
  width: 400px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 8px;
  background: #f6f8f9;
}

.c4 .icon {
  width: 24px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 8px;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 12px;
  font-size: 12px;
}

.c4 .link {
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="scroll c2"
      onReachEnd={[Function]}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="itemWrapper footer c3"
      >
        <div
          className="c4"
        >
          <div
            className="icon c5"
            fontWeight="inherit"
            size={18}
            type="#2f313a"
          >
            <i
              className="wg-question"
            />
          </div>
          <div
            className="c6"
            fontWeight="inherit"
            size={14}
            type="#2f313a"
          >
            Can’t find a farmers market?
            <div
              className="c5"
              fontWeight="inherit"
              size={18}
              type="#2f313a"
            >
              <div
                className="link c7"
                disabled={false}
                size={16}
                type="#59636f"
              >
                <span>
                  Contact Support?
                </span>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) onItemClick 1`] = `
.c7 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border-radius: 4px;
  object-fit: cover;
}

.c3 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c8 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c8:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c8:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c8 > div {
  padding: 14px;
}

.c8 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c8 > div:hover {
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > label {
  padding: 0 8px 0 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: -6px 8px -6px 0;
}

.c6:first-child {
  margin-left: -6px;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
  top: 72px;
  position: absolute;
  width: 100%;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="scroll c2"
      onReachEnd={[Function]}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="itemWrapper c3"
        onMouseDown={[Function]}
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Apple
          </div>
        </div>
      </li>
      <li
        className="itemWrapper c3"
        onMouseDown={[Function]}
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Banana
          </div>
        </div>
      </li>
      <li
        className="itemWrapper c3"
        onMouseDown={[Function]}
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Pear
          </div>
        </div>
      </li>
      <li
        className="itemWrapper footer c8"
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) with empty items 1`] = `
.c0 {
  width: 400px;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Search Field/Menu (Private) with key names 1`] = `
.c7 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border-radius: 4px;
  object-fit: cover;
}

.c3 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c8 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c8:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c8:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c8 > div {
  padding: 14px;
}

.c8 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c8 > div:hover {
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > label {
  padding: 0 8px 0 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: -6px 8px -6px 0;
}

.c6:first-child {
  margin-left: -6px;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
  top: 72px;
  position: absolute;
  width: 100%;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="scroll c2"
      onReachEnd={[Function]}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="itemWrapper c3"
        onMouseDown={[Function]}
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Apple
          </div>
        </div>
      </li>
      <li
        className="itemWrapper c3"
        onMouseDown={[Function]}
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Banana
          </div>
        </div>
      </li>
      <li
        className="itemWrapper c3"
        onMouseDown={[Function]}
      >
        <div
          className="itemContainer c4"
        >
          <div
            className="labelContainer c5"
          >
            <img
              alt=""
              className="itemImage c6 c7"
              size={40}
              src="https://picsum.photos/100?image=0"
            />
            Pear
          </div>
        </div>
      </li>
      <li
        className="itemWrapper footer c8"
      />
    </ul>
  </div>
</div>
`;
